tests/fixtures/guardrails/invalid/route-const-inline-business-logic/app/routes/products.ts
export const action = async () => {
  const normalizedHandle = " hat ".trim();
  return normalizedHandle.toUpperCase();
};
